--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "dayjs": "^1.11.11",
     "ng-rive": "^0.3.1",
     "rxjs": "~7.8.0",
