--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "@ng-select/ng-select": "^11.2.0",
     "dayjs": "^1.11.11",
     "ng-rive": "^0.3.1",
     "ngx-toastr": "^19.0.0",
